# plebchat-site

./: .gitignore  .gitmodules  README.md  REBASE.md  docker-compose.yaml  mkdocs.yml
admin/: .env.example  package.json  pnpm-lock.yaml
admin/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
admin/src/routes/: +layout.ts  +page.svelte
agent/scripts/: fetch_trace.sh
agent/src/plebchat/: __init__.py  graph.py
agents/: .env.example  README.md  langgraph.json  pyproject.toml
agents/scripts/: fetch_thread_trace.py
agents/src/plebchat/: __init__.py  graph.py  logging.py
backend/: .env.example  pyproject.toml  requirements.txt
backend/scripts/: generate_mnemonic.py
backend/src/: __init__.py  main.py
backend/src/auth/: __init__.py  nip98.py
backend/src/routes/: admin.py  wallet.py
backend/src/services/: cashu.py  lnurl.py
docs/: agents.md  index.md
docs/features/: payment-backend.md  user-interface.md
frontend/: .env.example  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/: index.ts
frontend/src/lib/components/: WelcomePage.svelte
frontend/src/lib/components/chat/: ChatContainer.svelte  ChatInput.svelte  ChatMessage.svelte  ChatMessageSkeleton.svelte  MarkdownContent.svelte  SettingsDrawer.svelte  ToolCallDisplay.svelte
frontend/src/lib/components/effects/: MouseTrail.svelte
frontend/src/lib/components/nav/: AgentDropdown.svelte  Navbar.svelte
frontend/src/lib/components/sidebar/: ThreadList.svelte  ThreadListSkeleton.svelte  ThreadSidebar.svelte
frontend/src/lib/components/ui/: ConfirmDialog.svelte  Skeleton.svelte
frontend/src/lib/stores/: agent.ts  sidebar.svelte.ts  stream.svelte.ts  threads.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
